# autoslicer

./: README.md  pyproject.toml
config/: 010mm_MK3S_config.ini  010mm_MK3S_support_build_plate_config.ini  010mm_MK3_config.ini  010mm_MK3_support_build_plate_config.ini  015mm_MINI_config.ini  015mm_MK3S_config.ini  015mm_MK3S_support_build_plate_config.ini  015mm_MK3_config.ini  015mm_MK3_support_build_plate_config.ini
src/autoslicer/: __init__.py  autoslice.py
