[tool.poetry]
name = "autoslicer"
version = "0.1.0"
description = "Autoslicer is a cmd/python helper for automatic slicing with PrusaSlicer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
numpy-stl = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
