[project]
name = "autoslicer"
version = "0.1.0"
description = "Autoslicer is a cmd/python helper for automatic slicing with PrusaSlicer"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "numpy-stl>=3.0.1",
    "tweaker3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tweaker3 = { git = "https://github.com/ChristophSchranz/Tweaker-3.git" }
